--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
+    <title>E-Commerce for Outsourcing Manufacturing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>manufacashare</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <link rel="stylesheet" href="./styles.css">
   </head>
-
   <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="namebox">
+    <h1 id="sitename">Marketplace for Manufacturing</h1>
+    <p id="catchphrase">Store for outsourcing manufacturing</p>
+    </div>
+    
   </body>
 </html>
