Your commit message

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1 id="sitename">Marketplace for Manufacturing</h1>
     <p id="catchphrase">Store for outsourcing manufacturing</p>
     </div>
-    
+    <div>
+      <img src="assets/hd-shopping-cart-white-logo-icon-transparent-png-701751694973936amdcratijm.png" alt="shoppingcart">
+      
+    </div>
   </body>
 </html>
